--- a/star_social/accounts/templates/accounts/login.html
+++ b/star_social/accounts/templates/accounts/login.html
@@ -6,7 +6,7 @@
 {% bootstrap_javascript jquery='full' %}
 
 {% block content %}
-    <div class="container">
+    <div class="container mt-3" style="width: 20em;">
         <h1>Log In!</h1>
         <form method="POST">
             {% csrf_token %}
