--- a/star_social/accounts/templates/accounts/signup.html
+++ b/star_social/accounts/templates/accounts/signup.html
@@ -6,7 +6,7 @@
 {% bootstrap_javascript jquery='full' %}
 
 {% block content %}
-    <div class="container">
+    <div class="container mt-3" style='width: 35em;'>
         <h1>Sign Up!</h1>
         <form method="POST">
             {% csrf_token %}
