--- a/star_social/groups/templates/groups/group_form.html
+++ b/star_social/groups/templates/groups/group_form.html
@@ -4,9 +4,9 @@
 
 
 {% block group_content %}
-    <h4>Create a new Group!</h4>
+    <h4 class="mt-3 mr-5">Create a new Group!</h4>
 
-    <form action="{% url 'groups:create' %}" method="post" id='groupForm'>
+    <form action="{% url 'groups:create' %}" method="post" id='groupForm' class='mt-3'>
         {% csrf_token %}
         {% bootstrap_form form %}
 
