--- a/star_social/posts/templates/posts/_post.html
+++ b/star_social/posts/templates/posts/_post.html
@@ -1,28 +1,28 @@
 <!-- HTML structure of an individual post -->
 
-<div class="post media">
-    <h3>{{ post.message_html|safe }}</h3><br>
-    
+<div class="post media mb-3 bg-secondary p-3">
     <div class="media-body">
+        <h3>{{ post.message_html|safe }}</h3>
         <!-- <strong>{{ post.user.username }}</strong> -->
-        <h5 class="media-heading">
+        <h5>
             <span class="username">
-                <a href="{% url 'posts:for_user'  username=post.user.username %}">@{{post.user.username}}</a>
+                <a style="color: gold;" href="{% url 'posts:for_user'  username=post.user.username %}">
+                    @{{post.user.username}}
+                </a>
             </span><br>
             <time class="time">
                 <a href="{% url 'posts:single' username=post.user.username pk=post.pk %}">
-                    {{ post.created_on }}
+                    <small class="font-weight-light" style="color: blanchedalmond;">{{ post.created_on }}</small>
                 </a>
             </time>
         </h5>
-        <div class="media-footer">
-            
+        <hr>
+        <div class="mt-3">
             {% if user.is_authenticated and post.user == user %}
                 <a href="{% url 'posts:delete' pk=post.pk %}" title="Delete" class="btn btn-danger">
                     Delete
                 </a>
             {% endif %}
-                
         </div>
     </div>
 </div>
