--- a/star_social/posts/templates/posts/user_post_list.html
+++ b/star_social/posts/templates/posts/user_post_list.html
@@ -2,14 +2,14 @@
 
 
 {% block prepost %}
-    <div class="col-md-4">
+    <div class="col-md-4 mt-3   ">
         <h3>@{{post_user.username}}</h3>
     </div>
 {% endblock prepost %}
 
 
 {% block post_content %}
-    <div class="col-md-8">
+    <div class="col-md-8 mt-3">
         
         {% for post in post_list %}
             {% include 'posts/_post.html' %}
