--- a/star_social/posts/templates/posts/_post.html
+++ b/star_social/posts/templates/posts/_post.html
@@ -1,8 +1,12 @@
 <!-- HTML structure of an individual post -->
-
 <div class="post media mb-3 bg-secondary p-3">
     <div class="media-body">
-        <h3>{{ post.message_html|safe }}</h3>
+        {% if not trunc %}
+            <h3>{{ post.message_html|safe|truncatechars_html:400 }}</h3>
+        {% else %}
+            <h3>{{ post.message_html|safe }}</h3>
+        {% endif %}
+        
         <!-- <strong>{{ post.user.username }}</strong> -->
         <h5>
             <span class="username">
@@ -18,9 +22,13 @@
         </h5>
         <hr>
         <div class="mt-3">
-            {% if user.is_authenticated and post.user == user %}
-                <a href="{% url 'posts:delete' pk=post.pk %}" title="Delete" class="btn btn-danger">
-                    Delete
+            <!-- {% if user.is_authenticated %} -->
+            <a href="{% url 'posts:comment' pk=post.pk %}" style="color: whitesmoke;"><b>Comment</b></a>
+            <!-- {% endif %} -->
+
+            {% if user.is_authenticated and post.user == user and not hide_delete %}
+                <a class="ml-2" href="{% url 'posts:delete' pk=post.pk %}" title="delete" style="color:rgba(248, 95, 68, 0.945); float: right;">
+                   <b>Delete</b>
                 </a>
             {% endif %}
         </div>
