--- a/star_social/posts/templates/posts/post_base.html
+++ b/star_social/posts/templates/posts/post_base.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="posts-page">
-        <div class="container">
+        <div class="container" style="overflow: hidden;">
             <div class="row">
                 
                 {% block prepost %}{% endblock prepost %}
