--- a/star_social/posts/templates/posts/post_confirm_delete.html
+++ b/star_social/posts/templates/posts/post_confirm_delete.html
@@ -1,19 +1,25 @@
 {% extends "posts/post_base.html" %}
 
-
-{% block post_content %}
-    <h3>Are you want to delete this post?</h3>
     
-    <div class="posts">
-        {% include 'posts/_post.html' with post=object hide_delete=True %}
-    </div>
+    {% block prepost %}
+        <div class="col-md-4 mt-3">
+            <h3>Are you want to delete this post?</h3>
+        </div>
+    {% endblock prepost %}
+        
+    {% block post_content %}
+        <div class="col-md-8 mt-3">
+            <div class="posts">
+                {% include 'posts/_post.html' with post=object hide_delete=True %}
+            </div>
 
-    <form method="post">
-        {% csrf_token %}
-        <input type="submit" value="Confirm Delete" class="btn btn-danger">
-        <a href="{% url 'posts:single' username=user.username pk=object.pk %}" class="btn btn-outline-secondary">
-            Cancel
-        </a>
-    </form>
-{% endblock post_content %}
+            <form method="post">
+                {% csrf_token %}
+                <input type="submit" value="Confirm Delete" class="btn btn-danger">
+                <a href="{% url 'posts:single' username=user.username pk=object.pk %}" class="btn btn-outline-secondary">
+                    Cancel
+                </a>
+            </form>
+        </div>
+    {% endblock post_content %}
     
