--- a/star_social/posts/templates/posts/user_post_list.html
+++ b/star_social/posts/templates/posts/user_post_list.html
@@ -2,7 +2,7 @@
 
 
 {% block prepost %}
-    <div class="col-md-4 mt-3   ">
+    <div class="col-md-4 mt-3" style="position: static;">
         <h3>@{{post_user.username}}</h3>
     </div>
 {% endblock prepost %}
@@ -12,8 +12,34 @@
     <div class="col-md-8 mt-3">
         
         {% for post in post_list %}
+        <a href="{% url 'posts:single' username=post.user.username pk=post.id %}" style="color: white;">
             {% include 'posts/_post.html' %}
+        </a>
         {% endfor %}
+        <!-- Django pagination -->
+        {% if is_paginated %}
+            {% if page_obj.has_previous %}
+                <a class='btn btn-outline-info mb-4'href="?page=1">First</a>
+                <a class='btn btn-outline-info mb-4'href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            {% endif %}
+
+            
+            {% for num in page_obj.paginator.page_range %}
+                
+                {% if page_obj.number == num %}
+                    <a class='btn btn-info mb-4'href="?page={{ num }}">{{ num }}</a>
+                {% elif  num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                    <a class='btn btn-outline-info mb-4'href="?page={{ num }}">{{ num }}</a>
+                {% endif %}
+                    
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+                <a class='btn btn-info mb-4'href="?page={{ page_ob.next_page_number }}">Next</a>
+                <a class='btn btn-info mb-4'href="?page={{ page_obj.paginator.num_pages }}">Previous</a>
+            {% endif %}
+                
+        {% endif %}
             
     </div>
 {% endblock post_content %}
