--- a/star_social/groups/templates/groups/group_detail.html
+++ b/star_social/groups/templates/groups/group_detail.html
@@ -22,9 +22,34 @@
         {% if group.posts.count == 0 %}
             <h2>No posts in this Group yet...</h2>
         {% else %}
-            {% for post in group.posts.all %}
-                {% include "posts/_post.html" %}
+            {% for post in object_list %}
+                <a href="{% url 'posts:single' username=post.user.username pk=post.id %}" style="color: white;">
+                    {% include "posts/_post.html" with hide_delete=True %}
+                </a>
             {% endfor %}
+
+            <!-- Django pagination -->
+            {% if is_paginated %}
+                {% if page_obj.has_previous %}
+                    <a class='btn btn-outline-info mb-4'href="?page=1">First</a>
+                    <a class='btn btn-outline-info mb-4'href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                {% endif %}
+   
+                {% for num in page_obj.paginator.page_range %}
+                        
+                    {% if page_obj.number == num %}
+                        <a class='btn btn-info mb-4'href="?page={{ num }}">{{ num }}</a>
+                    {% elif  num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                        <a class='btn btn-outline-info mb-4'href="?page={{ num }}">{{ num }}</a>
+                    {% endif %}
+                            
+                {% endfor %}
+
+                {% if page_obj.has_next %}
+                    <a class='btn btn-info mb-4'href="?page={{ page_ob.next_page_number }}">Next</a>
+                    <a class='btn btn-info mb-4'href="?page={{ page_obj.paginator.num_pages }}">Previous</a>
+                {% endif %}                    
+            {% endif %}
         {% endif %}
     </div>
 {% endblock %}
