added hide delete condition

--- a/star_social/posts/templates/posts/user_post_list.html
+++ b/star_social/posts/templates/posts/user_post_list.html
@@ -13,9 +13,10 @@
         
         {% for post in post_list %}
         <a href="{% url 'posts:single' username=post.user.username pk=post.id %}" style="color: white;">
-            {% include 'posts/_post.html' %}
+            {% include 'posts/_post.html' with hide_delete=True %}
         </a>
         {% endfor %}
+        
         <!-- Django pagination -->
         {% if is_paginated %}
             {% if page_obj.has_previous %}
