--- a/star_social/templates/accounts/base.html
+++ b/star_social/templates/accounts/base.html
@@ -16,41 +16,72 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet"> 
 
     <!-- Static CSS -->
-    <link rel="stylesheet" href="{% static 'starsocial/CSS/master.css' %}">
-
+    <link rel="stylesheet" href="{% static '/starsocial/CSS/master.css' %}" type="text/CSS">
+    <style>
+        body{
+            margin: 0;
+            padding: 0;
+            overflow-y: auto;
+            overflow-x:hidden;
+            color: white;
+        }
+        canvas{
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: -1;
+        }
+        .mycontent{
+            /* position: absolute; */
+            z-index: 0;
+            left: 20rem;
+            width: 80em;
+            /* overflow: auto; */
+        }
+        body .list-group{
+            color: black;
+        }
+    </style>
     <title>Star Social</title>
 </head>
 <body>
     <!------------------- NavBar ---------------------->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mynav" role='navigation', id='navbar'>
+    <nav class="navbar navbar-expand-lg bg-light fixed-top" role='navigation', id='navbar'>
         <div class="container">
             <a class="navbar-brand mynav" href="{% url 'home' %}">Star Social</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon" style="color: black;">Menu</span>
+            </button>
 
-            <ul class="nav ml-auto">
-                {% if user.is_authenticated %}
-                    <li class="nav-item mr-3"><a href="{% url 'posts:create' %}">Post</a></li>
-                    <li class="nav-item mr-3"><a href="{% url 'groups:all' %}">Groups</a></li>
-                    <li class="nav-item mr-3"><a href="{% url 'groups:create' %}">Create Group</a></li>
-                    <li class="nav-item"><a href="{% url 'accounts:logout' %}">Log Out</a></li>
-                {% else %}
-                    <li class="nav-item mr-3"><a href="{% url 'groups:all' %}">Groups</a></li>
-                    <li class="nav-item mr-3"><a href="{% url 'accounts:login' %}">Log in</a></li>
-                    <li class="nav-item"><a href="{% url 'accounts:signup' %}">Sign Up</a></li>
-                {% endif %}
-            </ul>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item mr-3"><a class="nav-link" href="{% url 'posts:create' %}">Post</a></li>
+                        <li class="nav-item mr-3"><a class="nav-link" href="{% url 'groups:all' %}">Groups</a></li>
+                        <li class="nav-item mr-3"><a class="nav-link" href="{% url 'groups:create' %}">Create Group</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'accounts:logout' %}">Log Out</a></li>
+                    {% else %}
+                        <li class="nav-item mr-3"><a class="nav-link" href="{% url 'groups:all' %}">Groups</a></li>
+                        <li class="nav-item mr-3"><a class="nav-link" href="{% url 'accounts:login' %}">Log in</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'accounts:signup' %}">Sign Up</a></li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
     </nav>
 
+    <canvas id="canvas"></canvas>
+
     <!------------------ Body ----------------------->
     <div class="container mycontent">
-
+        <br><br><br>
         {% block content %}
 
         {% endblock %}
 
     </div>
 
-    <canvas id="canvas"></canvas>
+    
 
     <script src="{% static 'starsocial/JS/master.js' %}" type="text/javascript">
     </script>
