--- a/star_social/posts/templates/posts/_post.html
+++ b/star_social/posts/templates/posts/_post.html
@@ -1,6 +1,6 @@
 <!-- HTML structure of an individual post -->
-<div class="post media mb-3 bg-secondary p-3">
-    <div class="media-body">
+<div class="post media mb-3 p-3" style=" background-color: rgba(112, 128, 144, 0.61);">
+    <div class="media-body" style="opacity: 100%;">
         {% if not trunc %}
             <h3>{{ post.message_html|safe|truncatechars_html:400 }}</h3>
         {% else %}
@@ -20,19 +20,29 @@
                 </a>
             </time>
         </h5>
-        <hr>
+        <hr style="border: solid 0.5mm wheat;">
         <div class="mt-3">
-            <!-- {% if user.is_authenticated %} -->
-            <a href="{% url 'posts:comment' pk=post.pk %}" style="color: whitesmoke;"><b>Comment</b></a>
-            <!-- {% endif %} -->
+            <!-- Like button -->
+            <a href="{% url 'posts:like-toggle' username=post.user.username pk=post.pk %}" style="color: white; padding-right: 3mm;">
+                <span class="badge badge-info">{{ post.likes.count }} </span>
+                <b>Like{{ post.likes.count|pluralize }}</b>
+            </a>
+            
+            <!-- Comment Button -->
+            {% if user.is_authenticated %}
+                <a href="{% url 'posts:comment' pk=post.pk %}" style="color: whitesmoke; border-left: solid white; padding-left: 3mm;">
+                    <span class="badge badge-info">{{ post.comments.count }}</span>
+                    <b>Comment{{ post.comments.count|pluralize }}</b>
+                </a>
+            {% endif %}
 
             {% if user.is_authenticated and post.user == user and not hide_delete %}
                 <!-- Edit Button -->
-                <a class='ml-2' href="{% url 'posts:post_update' pk=post.pk %}" style="color: whitesmoke; border-left: solid white; padding-left: 3mm;">
+                <a class='ml-2' href="{% url 'posts:post_update' username=post.user.username pk=post.pk %}" style="color: whitesmoke; border-left: solid white; padding-left: 3mm;">
                     <b>Edit</b>
                 </a>
                 <!-- Delete button -->
-                <a class="ml-2" href="{% url 'posts:delete' pk=post.pk %}" title="delete" style="color:rgba(248, 95, 68, 0.945); float: right;">
+                <a class="ml-2" href="{% url 'posts:delete' username=post.user.username pk=post.pk %}" title="delete" style="color:rgba(248, 95, 68, 0.945); float: right;">
                    <b>Delete</b>
                 </a>
             {% endif %}
