--- a/star_social/static/starsocial/CSS/master.css
+++ b/star_social/static/starsocial/CSS/master.css
@@ -1,10 +1,31 @@
 body{
     margin: 0;
-    overflow: scroll;
+    padding: 0;
+    overflow-y: auto;
+    overflow-x:hidden;
     background-color: rgba(2, 10, 53, 0.767);
-    /* color: white; */
+    color: white;
 }
 
-nav{
-    position: ;
+canvas{
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+}
+
+.mycontent{
+    /* position: absolute; */
+    z-index: 0;
+    left: 20rem;
+    width: 80em;
+    /* overflow: auto; */
+}
+
+body .list-group{
+    color: black;
+}
+
+.welcome{
+    color: khaki;
 }
