--- a/star_social/templates/accounts/base.html
+++ b/star_social/templates/accounts/base.html
@@ -66,6 +66,6 @@
     <script src="{% static 'starsocial/JS/master.js' %}" type="text/javascript">
     </script>
 </body>
-    
+<!-- Random change -->
 
 </html>
