--- a/star_social/templates/accounts/index.html
+++ b/star_social/templates/accounts/index.html
@@ -2,5 +2,5 @@
 {% extends 'accounts/base.html' %}
 
 {% block content %}
-    <h1>Welcome to Star Social!</h1>
+    <h1 style="color: chartreuse;">Welcome to Star Social!</h1>
 {% endblock %}
